deps/v8/test/message/isvar.out
*%(basename)s:31: SyntaxError: builtin %%IS_VAR: not a variable
%%IS_VAR(x+x);
           ^
SyntaxError: builtin %%IS_VAR: not a variable
